# OneCAD

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  GEMINI.md  Makefile  PHASES.md  README.md  SPECIFICATION.md
.cache/clangd/index/: SketchToolManager.cpp.46351D85F53910AE.idx  Viewport.cpp.F5CB094D32D5C163.idx  proto_sketch_snap.cpp.19049DA914F9E9E6.idx
.github/: copilot-instructions.md
.opencode/: oh-my-opencode.jsonc  opencode.jsonc
docs/: CAM.md  ELEMENT_MAP.md  PARAMETRIC_PLAN.md  PHASES.md  SKETCH_IMPLEMENTATION_PLAN.md  SPECIFICATION.md  TOPO.md
docs/researches/: SHAPR_UX.md  SKETCHING.md  STEP.md  VISUALIZATION.md
resources/: FileIcon.icns  resources.qrc
src/app/: CMakeLists.txt  Info.plist.in  Logging.cpp
src/app/commands/: DeleteBodyCommand.cpp  DeleteBodyCommand.h  DeleteSketchCommand.cpp  DeleteSketchCommand.h  RenameBodyCommand.cpp  RenameBodyCommand.h  RenameSketchCommand.cpp  RenameSketchCommand.h  ToggleVisibilityCommand.cpp  ToggleVisibilityCommand.h
src/app/document/: Document.cpp  Document.h  OperationRecord.h
src/app/history/: DependencyGraph.cpp  RegenerationEngine.cpp  RegenerationEngine.h
src/core/: AGENTS.md  CMakeLists.txt
src/core/loop/: LoopDetector.cpp  LoopDetector.h
src/core/modeling/: BooleanOperation.cpp  BooleanOperation.h  EdgeChainer.cpp  EdgeChainer.h
src/core/sketch/: AutoConstrainer.cpp  FaceBoundaryProjector.cpp  FaceBoundaryProjector.h  IntersectionManager.cpp  IntersectionManager.h  Sketch.cpp  Sketch.h  SketchArc.cpp  SketchCircle.cpp  SketchEllipse.cpp  SketchEllipse.h  SketchEntity.h  SketchLine.cpp  SketchPoint.cpp  SketchRenderer.cpp  SketchRenderer.h  SketchTypes.h  SnapManager.cpp  SnapManager.h
src/core/sketch/constraints/: Constraints.cpp  Constraints.h
src/core/sketch/tools/: ArcTool.cpp  ArcTool.h  CircleTool.cpp  EllipseTool.cpp  EllipseTool.h  LineTool.cpp  MirrorTool.cpp  MirrorTool.h  SketchTool.h  SketchToolManager.cpp  SketchToolManager.h  TrimTool.cpp  TrimTool.h
src/io/: HistoryIO.cpp
src/kernel/: AGENTS.md
src/kernel/elementmap/: ElementMap.h
src/render/: AGENTS.md  Camera3D.cpp  Camera3D.h  Grid3D.cpp  Grid3D.h
src/ui/: AGENTS.md  CMakeLists.txt
src/ui/components/: SidebarToolButton.cpp
src/ui/history/: EditParameterDialog.cpp
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/navigator/: ModelNavigator.cpp  ModelNavigator.h
src/ui/sketch/: ConstraintPanel.cpp  ConstraintPanel.h  DimensionEditor.cpp  DimensionEditor.h  SketchModePanel.cpp  SketchModePanel.h
src/ui/start/: StartOverlay.cpp  StartOverlay.h
src/ui/theme/: ThemeConfig.cpp  ThemeConfig.h  ThemeManager.cpp  ThemeManager.h
src/ui/toolbar/: ContextToolbar.cpp  ContextToolbar.h
src/ui/tools/: ExtrudeTool.cpp  FilletChamferTool.cpp  FilletChamferTool.h  ModelingToolManager.cpp  ModelingToolManager.h  PushPullTool.cpp  PushPullTool.h  RevolveTool.cpp  ShellTool.cpp  ShellTool.h
src/ui/viewcube/: ViewCube.cpp  ViewCube.h
src/ui/viewport/: Viewport.cpp  Viewport.h  ViewportModeling.cpp  ViewportRevolve.cpp
tests/: CMakeLists.txt
tests/prototypes/: proto_custom_map.cpp  proto_regeneration.cpp  proto_sketch_snap.cpp  proto_tnaming.cpp
